[package]
name = "sample"
version = "0.1.0"
edition = "2021"
description = "Example of 'cargo package' failure"
license = "ISC"
repository = "https://github.com/foresterre/sic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.24.0"
strum = "0.24.0"